# My_calorie_norm

./: Procfile  README.md  calorie.db  main.py  pyproject.toml  requirements.txt
alembic/versions/: 95889643a4be_init.py  d1e73ec44d35_edit_type.py  db51759692ee_add_date.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: 1313.py  calorie.py  login.py  secret.json  test.py
src/routes/: calorie.py
src/schemas/: calorie.py
src/static/css/: Calorie.css  add_calorie.css  nicepage-site.css
src/static/js/: add_calorie.js
src/templates/: add_calorie.html  index.html  norm_calorie.html
