[tool.poetry]
name = "My_calorie_norm"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "My_calorie_norm"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.95.0"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
psycopg2-binary = "^2.9.6"
google-auth = "^2.21.0"
google-api-python-client = "^2.91.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
oauth2client = "^4.1.3"
apiclient = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
